// SPDX-FileCopyrightText: Â© 2024-2025 Phala Network <dstack@phala.network>
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

import "google/protobuf/empty.proto";

package gateway;

// RegisterCvmRequest is the request for RegisterCvm.
message RegisterCvmRequest {
  // The public key of the WireGuard interface of the CVM.
  string client_public_key = 1;
}

// DebugRegisterCvmRequest is the request for DebugRegisterCvm (only works when debug_mode is enabled).
message DebugRegisterCvmRequest {
  // The public key of the WireGuard interface of the CVM.
  string client_public_key = 1;
  // The app id (hex encoded).
  string app_id = 2;
  // The instance id (hex encoded).
  string instance_id = 3;
}

// RegisterCvmResponse is the response for RegisterCvm.
message RegisterCvmResponse {
  // WireGuard configuration
  WireGuardConfig wg = 1;
  // Agent configuration
  GuestAgentConfig agent = 2;
  // All gateway nodes in the cluster
  repeated GatewayNodeInfo gateways = 3;
}

message WireGuardPeer {
  // The wireguard peer public key.
  string pk = 1;
  // The wireguard peer IP address.
  string ip = 2;
  // The wireguard peer endpoint.
  string endpoint = 3;
}

// WireGuardConfig is the configuration of the WireGuard.
message WireGuardConfig {
  // The IP address of the CVM.
  string client_ip = 1;
  // List of proxy nodes.
  repeated WireGuardPeer servers = 2;
}

// GuestAgentConfig is the configuration of the guest agent.
message GuestAgentConfig {
  // The external port of the guest agent.
  uint32 external_port = 1;
  // The in CVM port of the guest agent.
  uint32 internal_port = 2;
  // The base domain of the zt-https
  string domain = 3;
  // The app address namespace prefix
  string app_address_ns_prefix = 4;
}

// StatusResponse is the response for Status.
message StatusResponse {
  // Peer id
  uint32 id = 1;
  // My URL.
  string url = 2;
  // The bootnode URL.
  string bootnode_url = 3;
  // Number of established proxy connections.
  uint64 num_connections = 4;
  // The list of proxied CVMs.
  repeated HostInfo hosts = 5;
  // The list of proxy nodes.
  repeated GatewayNodeInfo nodes = 6;
  // Peer uuid
  bytes uuid = 7;
}

// HostInfo is the information of a host.
message HostInfo {
  // The Instance id
  string instance_id = 1;
  // The IP address of the host.
  string ip = 2;
  // The app id of the host.
  string app_id = 3;
  // The base domain of the HTTPS endpoint of the host.
  string base_domain = 4;
  // The external port of the host.
  uint32 port = 5;
  // The latest handshake time of the host.
  uint64 latest_handshake = 6;
  // The number of connections of the host.
  uint64 num_connections = 7;
}

message QuotedPublicKey {
  bytes public_key = 1;
  string quote = 2;
}

// AcmeInfoResponse is the response for AcmeInfo.
message AcmeInfoResponse {
  // The ACME account URI.
  string account_uri = 1;
  // The public key history of the certificate.
  repeated bytes hist_keys = 2;
  // The quoted public key of the certificate.
  repeated QuotedPublicKey quoted_hist_keys = 3;
  // The quote of the ACME account URI.
  string account_quote = 4;
  // Active certificate
  string active_cert = 5;
  // The domain that serves ZT-HTTPS
  string base_domain = 6;
}

// Get HostInfo for associated instance id.
message GetInfoRequest {
  string id = 1;
}

message GetInfoResponse {
  bool found = 1;
  optional HostInfo info = 2;
}

message GetMetaResponse {
  uint32 registered = 1;
  uint32 online = 2;
}

message GatewayNodeInfo {
  // The ID of the node.
  uint32 id = 1;
  // The uuid of the node.
  bytes uuid = 2;
  // The RPC URL of the node.
  string url = 3;
  // The last seen time of the node.
  uint64 last_seen = 4;
  // The wireguard peer public key.
  string wg_public_key = 5;
  // The wireguard peer IP address.
  string wg_ip = 6;
  // The wireguard peer endpoint.
  string wg_endpoint = 7;
}

message InfoResponse {
  // The base domain of the ZT-HTTPS
  string base_domain = 1;
  // The external port of the ZT-HTTPS
  uint32 external_port = 2;
  // The app address namespace prefix
  string app_address_ns_prefix = 3;
}

// Peer info for GetPeers response
message PeerInfo {
  // The node ID
  uint32 id = 1;
  // The sync URL of the node
  string url = 2;
}

// Response for GetPeers - returns all known peer nodes
message GetPeersResponse {
  // This node's ID
  uint32 my_id = 1;
  // This node's sync URL
  string my_url = 2;
  // All known peers (including self)
  repeated PeerInfo peers = 3;
}

service Gateway {

  // Register a new proxied CVM.
  rpc RegisterCvm(RegisterCvmRequest) returns (RegisterCvmResponse) {}
  // List all ACME account URIs and the public key history of the certificates for the Content Addressable HTTPS.
  rpc AcmeInfo(google.protobuf.Empty) returns (AcmeInfoResponse) {}
  // Get the gateway info
  rpc Info(google.protobuf.Empty) returns (InfoResponse) {}
  // Get all known peers (requires gateway mTLS authentication)
  rpc GetPeers(google.protobuf.Empty) returns (GetPeersResponse) {}
}

// Debug service - runs on a separate port when debug.enabled=true
service Debug {
  // Register a new proxied CVM without attestation (for testing only).
  rpc RegisterCvm(DebugRegisterCvmRequest) returns (RegisterCvmResponse) {}
  // Get the gateway info (for testing service availability).
  rpc Info(google.protobuf.Empty) returns (InfoResponse) {}
  // Get WaveKV sync data for testing (peer addresses, node info, instances from KvStore).
  rpc GetSyncData(google.protobuf.Empty) returns (DebugSyncDataResponse) {}
  // Get Proxy State data for testing (instances from in-memory ProxyState).
  rpc GetProxyState(google.protobuf.Empty) returns (DebugProxyStateResponse) {}
}

// Peer address entry
message PeerAddrEntry {
  uint64 node_id = 1;
  string url = 2;
}

// Node info entry from the persistent store
message NodeInfoEntry {
  uint64 node_id = 1;
  string url = 2;
  string wg_public_key = 3;
  string wg_endpoint = 4;
  string wg_ip = 5;
}

// Instance info entry
message InstanceEntry {
  string instance_id = 1;
  string app_id = 2;
  string ip = 3;
  string public_key = 4;
}

// Debug sync data response - returns all synced data from KvStore for verification
message DebugSyncDataResponse {
  // This node's ID
  uint64 my_node_id = 1;
  // Peer addresses (from __peer_addr/* keys)
  repeated PeerAddrEntry peer_addrs = 2;
  // Node info (from node/* keys)
  repeated NodeInfoEntry nodes = 3;
  // Instances (from inst/* keys)
  repeated InstanceEntry instances = 4;
  // Total keys in persistent store
  uint64 persistent_keys = 5;
  // Total keys in ephemeral store
  uint64 ephemeral_keys = 6;
}

// Proxy state instance entry (from in-memory ProxyState)
message ProxyStateInstance {
  string instance_id = 1;
  string app_id = 2;
  string ip = 3;
  string public_key = 4;
  uint64 reg_time = 5;
}

// Debug proxy state response - returns in-memory ProxyState data for verification
message DebugProxyStateResponse {
  // All instances from ProxyState.instances
  repeated ProxyStateInstance instances = 1;
  // All allocated IP addresses
  repeated string allocated_addresses = 2;
}

message RenewCertResponse {
  // True if the certificate was renewed.
  bool renewed = 1;
}

// Request to set a node's sync URL
message SetNodeUrlRequest {
  // The node ID to update
  uint32 id = 1;
  // The new URL for this node
  string url = 2;
}

// Request to set a node's status
message SetNodeStatusRequest {
  // The node ID to update
  uint32 id = 1;
  // The new status: "up" or "down"
  string status = 2;
}

// Peer sync status
message PeerSyncStatus {
  uint32 id = 1;
  uint64 local_ack = 2;
  uint64 peer_ack = 3;
  uint64 buffered_logs = 4;
  // Last seen timestamps: [(observer_node_id, timestamp), ...]
  repeated LastSeenEntry last_seen = 5;
}

message LastSeenEntry {
  uint32 node_id = 1;
  uint64 timestamp = 2;
}

// Store sync status
message StoreSyncStatus {
  string name = 1;
  uint32 node_id = 2;
  uint64 n_keys = 3;
  uint64 next_seq = 4;
  bool dirty = 5;
  bool wal_enabled = 6;
  repeated PeerSyncStatus peers = 7;
}

// WaveKV sync status response
message WaveKvStatusResponse {
  bool enabled = 1;
  StoreSyncStatus persistent = 2;
  StoreSyncStatus ephemeral = 3;
}

// Handshake observation entry
message HandshakeEntry {
  uint32 observer_node_id = 1;
  uint64 timestamp = 2;
}

// Get instance handshakes request
message GetInstanceHandshakesRequest {
  string instance_id = 1;
}

// Get instance handshakes response
message GetInstanceHandshakesResponse {
  repeated HandshakeEntry handshakes = 1;
}

// Global connections statistics
message GlobalConnectionsStats {
  // Total connections across all nodes
  uint64 total_connections = 1;
  // Per-node connection counts
  map<uint32, uint64> node_connections = 2;
}

// Node status entry
message NodeStatusEntry {
  uint32 node_id = 1;
  string status = 2; // "up" or "down"
}

// Get node statuses response
message GetNodeStatusesResponse {
  repeated NodeStatusEntry statuses = 1;
}

service Admin {
  // Get the status of the gateway.
  rpc Status(google.protobuf.Empty) returns (StatusResponse) {}
  // Find Proxied HostInfo by instance ID
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {}
  // Exit the Gateway process.
  rpc Exit(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  // Renew the proxy TLS certificate if certbot is enabled
  rpc RenewCert(google.protobuf.Empty) returns (RenewCertResponse) {}
  // Reload the proxy TLS certificate from files
  rpc ReloadCert(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  // Set CAA records
  rpc SetCaa(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  // Summary API for inspect.
  rpc GetMeta(google.protobuf.Empty) returns (GetMetaResponse) {}
  // Set a node's sync URL - used for dynamic peer management
  rpc SetNodeUrl(SetNodeUrlRequest) returns (google.protobuf.Empty) {}
  // Set a node's status (up/down)
  rpc SetNodeStatus(SetNodeStatusRequest) returns (google.protobuf.Empty) {}
  // Get WaveKV sync status
  rpc WaveKvStatus(google.protobuf.Empty) returns (WaveKvStatusResponse) {}
  // Get instance handshakes from all nodes
  rpc GetInstanceHandshakes(GetInstanceHandshakesRequest) returns (GetInstanceHandshakesResponse) {}
  // Get global connections statistics
  rpc GetGlobalConnections(google.protobuf.Empty) returns (GlobalConnectionsStats) {}
  // Get all node statuses
  rpc GetNodeStatuses(google.protobuf.Empty) returns (GetNodeStatusesResponse) {}
}
